@@ -6,6 +6,7 @@ Release 0.7
 
 2009-06-18:
 - Change BlobStream (now: BinaryStream) to use Binary instead of Blob.
+- Use ByteString/ByteArray instead of Blob in Stream methods.
 
 2009-06-12:
 - Lower-case module names for included modules (it remains case-sensitive).
